
==== @KafkaListener Changes

You can now override the `concurrency` and `autoStartup` properties of the listener container factory by setting properties on the annotation.

See <<kafka-listener-annotation>> for more information.

You can now use `@KafkaListener` as a meta-annotation on your own annotations.

See <<kafka-listener-meta>> for more information.

==== Header Mapping Changes

Headers of type `MimeType` and `MediaType` are now mapped as simple strings in the `RecordHeader` value.
Previously, they were mapped as JSON and only `MimeType` was decoded, `MediaType` could not be decoded.
They are now simple strings for interoperability.

Also, the `DefaultKafkaHeaderMapper` has a new method `addToStringClasses` allowing the specification of types that should be mapped using `toString()` instead of JSON.

See <<headers>> for more information.

==== Embedded Kafka Changes

The `KafkaEmbedded` class and its `KafkaRule` interface have need deprecated in favor of the `EmbeddedKafkaBroker` and its JUnit 4 `EmbeddedKafkaRule` wrapper.
The `@EmbeddedKafka` annotation now populates an `EmbeddedKafkaBroker` bean instead of the deprecated `KafkaEmbedded`.
This allows the use of `@EmbeddedKafka` in JUnit 5 tests.

See <<testing>> for more information.

==== JsonSerializer/Deserializer Enhancements

You can now provide type mapping information using producer/consumer properties.

New constructors are available on the deserializer to allow overriding the type header information with the supplied target type.

The JsonDeserializer will now remove any type information headers by default.

See <<serdes>> for more information.

==== Kafka Streams Changes

The streams configuration bean must now be a simple `Properties` object instead of a `StreamsConfig`.

The `StreamsBuilderFactoryBean` has been moved from package `...core` to `...config`.

See <<kafka-streams>> for more information.


==== Transactional Id
